# mem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
include/: mem.h
src/: mem.c
tests/: alloc.c  alloc_with_size_info.c  allocate.c  realloc.c  realloc_with_size_info.c
